--- a/src/lab/exp8/Manual.html
+++ b/src/lab/exp8/Manual.html
@@ -98,8 +98,57 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							
 							<!--edit -->
 <h1 class="text-h2-lightblue">Consolidation Test</h1><div class="content" id="experiment-article-section-5-content">
-<h3>Observation Table:</h3> <br/><br/>
-<img alt="" height="375" src="obervation_table.JPG" width="550"/><br/>
+<h3>Observation Table:</h3> <br/>
+<!-- <img alt="" height="375" src="obervation_table.JPG" width="550"/><br/> -->
+<!-- Adding the contents of image as text -->
+
+
+
+<h3>Observation Table and calculation table :</h3> <br/>
+<table border="1" padding="5" style="width : 400px;text-align: center; ">
+<tbody>
+	<tr><td>Pressure Intensity(Kg/cm<sup>2</sup>)</td><td><b>0.1</td><td><b>0.2</td><td><b>0.5</td><td><b>1</td>
+	<td><b>2</td><td><b>4</td><td><b>8</td></td></tr>
+	<tr><td>Elapsed Time </td><td colspan="7">Dial guage reading</td> </tr>
+
+	<tr><td>0.25 min </td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>1 min </td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>2.5 min </td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>4 min</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>6.25 min</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>9 min</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>16 min</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>25 min</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>30 min</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>1 hr</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>2 hrs</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>4 hrs</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>8 hrs</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+	<tr><td>24 hrs</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+</tbody></table>
+
+
+
+
+
+
+
+
+
+
 <p>
 <a href="Exp-8 ConsolidationTest.pdf" target="_blank">Read More</a>
 </p>
